--- a/index.html
+++ b/index.html
@@ -195,8 +195,9 @@
   </div>
 
   <footer>
-    <p>2025 | Todos los derechos reservados &copy; | relaciones sanas y consentimiento.</p>
+    <p>2025 | Todos los derechos reservados &copy; | relaciones sanas y consentimiento. hola si ves esto 👻</p>
     <p><a href="#">Volver arriba</a></p>
   </footer>
 </body>
 </html>
+
